gnome-shell (2.91.3-1) UNRELEASED; urgency=low

  * New upstream release.
    - debian/control.in:
      + Updated dependencies and build dependencies.
    - debian/patches/02_undo_gtk3_transition.diff:
      + Removed, let's use GTK+3 from now on.
    - debian/patches/03_fix_dconf_service_location.diff:
      + Updated.
    - debian/rules:
      + Add a dirty hack so we can find the mutter gir.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 05 Dec 2010 20:08:44 +0100

gnome-shell (2.31.5-2) experimental; urgency=low

  * debian/control:
  - depend and build-depend on gir1.0-glib-2.0 (>= 0.6.15~git20100713)
  - also depend on gjs, because the clock preferences uses gjs-console for
    some reason

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 28 Jul 2010 11:45:06 +0200

gnome-shell (2.31.5-1) experimental; urgency=low

  * New development release.
  - depend on mutter 2.31.5
  - refresh patches
  - fixes requirements on mutter (Closes: #586124)
  * debian/control.in:
  - Build-depend on glib >= 2.25.11-1 because we use glib-compile-schemas
  - Build-depend on gtk+ >= 2.21.1
  - Build-depend on gobject-introspection >= 0.6.15~git20100713-1 because
    we need newer glib bindings
  - Build-depend on gir1.0-json-glib-1.0 (Closes: #584660), thanks to
    Raphael Hertzog for pointing out the fix
  - gnome-shell depends on gir1.0-gconf-2.0 >= 2.31.5 to run
  * debian/patches/02_undo_gtk3_transition.diff:
  - undo gtk2->gtk3 migration since we do not yet have gtk+ 3 on Debian
  * debian/patches/03_fix_dconf_service_location.diff:
  - fix the path used to start dconf-service

 -- Gustavo Noronha Silva <gustavo.noronha@collabora.co.uk>  Tue, 13 Jul 2010 14:36:34 -0300

gnome-shell (2.31.2-1) experimental; urgency=low

  * New upstream release
  - depends on mutter 2.31
  - includes debian/patches/02_gjs_build_fix.patch, so removing
  * debian/rules:
  - depends on clutter-1.0 >= 1.2.8
