@@ -15,7 +15,7 @@ Build-Depends: cdbs,
                intltool,
                libgjs-dev (>= 0.7.6),
                gvfs-backends,
-               gobject-introspection (>= 0.9),
+               gobject-introspection (>= 0.9.12-4~),
                gir1.0-atk-1.0 (>= 1.32),
                gir1.0-clutter-1.0 (>= 1.4),
                gir1.0-freedesktop (>= 0.9),
