@@ -8,20 +8,8 @@ include /usr/share/gnome-pkg-tools/1/rules/uploaders.mk
 -include /usr/share/gnome-pkg-tools/1/rules/gnome-get-source.mk
 
 $(patsubst %,binary-predeb/%,$(DEB_ALL_PACKAGES)) ::
-	# Dirty hack to work-around dh_girepository limitation
-	# Should we make it scan for typelib files everywhere?
-	mkdir -p debian/gnome-shell/usr/lib/girepository-1.0
-	cp debian/gnome-shell/usr/lib/gnome-shell/*typelib \
-		debian/gnome-shell/usr/lib/girepository-1.0/
-	# Also... hrm. What do we do regarding these other "private"
-	# ones?
-	cp /usr/lib/mutter/*typelib \
-		debian/gnome-shell/usr/lib/girepository-1.0/
-	# I'm not proud of this
-	mkdir debian/gnome-shell/usr/share/gir-1.0/
-	cp /usr/lib/mutter/*gir debian/gnome-shell/usr/share/gir-1.0
-	dh_girepository -p$(cdbs_curpkg) -l src:/usr/lib/mutter/
-	rm -rf debian/gnome-shell/usr/lib/girepository-1.0
+	dh_girepository -p$(cdbs_curpkg) -l src -i /usr/lib/mutter/ \
+		/usr/lib/gnome-shell
 	find debian/$(cdbs_curpkg) -name '*.la' -exec rm -f '{}' ';'
 
 DEB_CONFIGURE_EXTRA_FLAGS += --enable-compile-warnings=yes
